# sct

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  ETHICS.md  README.md  benchmarks.md  config.toml  install.ps1  install.sh  mkdocs.yml  queries.md  roadmap.md  spec.md  why-build-this.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  data-volume-readme.md  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-docs-to-ghpages.yml  pages.yml  release.yml
bench/: README.md  bench.sh
bench/fixtures/: concepts.txt  search_terms.txt
bench/lib/: fhir.sh  local.sh  report.sh  timing.sh
bench/operations/: ancestors.sh  bulk.sh  children.sh  lookup.sh  search.sh  subsumption.sh
docs/: _index.md  benchmarks.md  completions.md  embed.md  gui.md  index.md  lexical.md  markdown.md  mcp.md  ndjson.md  parquet.md  semantic.md  sqlite.md  tui.md  uk-edition-structure.md  vector-search-landscape.md  walkthrough.md  why-build-this.md
docs/commands/: codelist.md  completions.md  diff.md  embed.md  gui.md  info.md  lexical.md  mcp.md  ndjson.md  parquet.md  refset.md  semantic.md  sqlite.md  tct.md  trud.md  tui.md
docs/walkthrough/: everything-else.md  getting-started.md  index.md  interactive-uis.md  parquet-duckdb.md  refsets-codelists.md  semantic-llm.md  transitive-closure.md
s/: docs  install  version++
sct/: Cargo.toml
sct/assets/: index.html
sct/src/: builder.rs  main.rs  rf2.rs  schema.rs
sct/src/commands/: codelist.rs  completions.rs  diff.rs  embed.rs  gui.rs  lexical.rs  markdown.rs  mcp.rs  mod.rs  ndjson.rs  parquet.rs  semantic.rs  sqlite.rs  tui.rs
specs/: bench.md  embed-models-spec.md  library-rs.md  queries.md  roadmap.md  sct-ql-spec.md  semantic-search-mcp-spec.md  spec.md  tct-spec.md
specs/commands/: codelist.md  completions.md  diff.md  embed.md  gui.md  info.md  lexical.md  markdown.md  mcp.md  ndjson.md  parquet.md  semantic.md  serve.md  sqlite.md  trud.md  tui.md
src/: builder.rs  format.rs  lib.rs  main.rs  rf2.rs  schema.rs
src/commands/: codelist.rs  diff.rs  embed.rs  gui.rs  info.rs  lexical.rs  lookup.rs  markdown.rs  mcp.rs  mod.rs  ndjson.rs  parquet.rs  refset.rs  semantic.rs  sqlite.rs  tct.rs  trud.rs
tests/: builder_records.rs  rf2_parsing.rs
