[package]
name = "sct-rs"
version = "0.3.8"
edition = "2021"
description = "Local-first SNOMED CT toolchain: RF2 → NDJSON, SQLite, Parquet, Markdown, Arrow embeddings, and MCP server"
license = "MIT"
repository = "https://github.com/pacharanero/sct"
homepage = "https://github.com/pacharanero/sct"
readme = "README.md"
keywords = ["snomed", "healthcare", "terminology", "fhir", "mcp"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "sct"
path = "src/main.rs"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:axum", "dep:tokio", "dep:open"]
full = ["tui", "gui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
anyhow = "1"
walkdir = "2"
zip = "8"
tempfile = "3"
indexmap = { version = "2", features = ["serde"] }
rusqlite = { version = "0.39", features = ["bundled"] }
parquet = { version = "58", features = ["arrow"] }
arrow = { version = "58", default-features = false, features = ["ipc"] }
indicatif = "0.18"
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"
toml = "0.8"
serde_yml = "0.0.12"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }

# Optional: sct tui
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.27", optional = true }

# Optional: sct gui
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"], optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
