[package]
name = "sct"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sct"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
anyhow = "1"
walkdir = "2"
indexmap = { version = "2", features = ["serde"] }
