[package]
name = "sct"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sct"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
anyhow = "1"
walkdir = "2"
indexmap = { version = "2", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
parquet = { version = "53", features = ["arrow"] }
arrow = { version = "53", default-features = false, features = ["ipc"] }
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
