[package]
name = "sct"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "sct"
path = "src/main.rs"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:axum", "dep:tokio", "dep:open"]
full = ["tui", "gui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
anyhow = "1"
walkdir = "2"
indexmap = { version = "2", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
parquet = { version = "53", features = ["arrow"] }
arrow = { version = "53", default-features = false, features = ["ipc"] }
indicatif = "0.17"
ureq = { version = "2", features = ["json"] }

# Optional: sct tui
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.27", optional = true }

# Optional: sct gui
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"], optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
tempfile = "3"
